# minimum-autograd

./: README.md
minimum_autograd/: README.md  pyproject.toml
minimum_autograd/src/: autograd_benchmark.py
minimum_autograd/src/minimum_autograd/: assets.py  core.py
